Coverity analysis defect 135330: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2023-04-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/query/sbe_multi_planner.h:126: UNINIT_CTOR 135330 Class member declaration for "_maxNumResults".
      /src/mongo/db/query/sbe_multi_planner.h:51: UNINIT_CTOR 135330 Non-static class member "_maxNumResults" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/query/sbe_multi_planner.h:127: UNINIT_CTOR 135330 Class member declaration for "_maxNumReads".
      /src/mongo/db/query/sbe_multi_planner.h:51: UNINIT_CTOR 135330 Non-static class member "_maxNumReads" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Ivan Fefer
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: