SERVER-74538 Fix uninitialized sbe multi planner fields